test/Fail/BracketsMismatch.agda
module BracketsMismatch where

_ = ⦇ f x y z |)
_ = (| f x y z ⦈
_ = f ⦃ x }}
_ = f {{ x ⦄
